--- a/src/Features/Core/Portable/FeaturesResources.resx
+++ b/src/Features/Core/Portable/FeaturesResources.resx
@@ -1463,4 +1463,7 @@ This version used in: {2}</value>
   <data name="Introduce_query_variable" xml:space="preserve">
     <value>Introduce query variable</value>
   </data>
+  <data name="Split_into_nested_0_statements" xml:space="preserve">
+    <value>Split into nested '{0}' statements</value>
+  </data>
 </root>
